Adding Jojo's Miller-Rabin code to the document and improving prime sieve.

--- a/math/math.tex
+++ b/math/math.tex
@@ -17,16 +17,19 @@ Sei $0 \leq x < n$. Definiere $d := gcd(x, n)$.
 \end{description}
 \lstinputlisting{math/multInv.cpp}
 
-\subsection{Primzahlsieb von Eratosthenes}
+\subsection{Primzahlsieb von \textsc{Eratosthenes}}
 \lstinputlisting{math/primeSieve.cpp}
 
-\subsubsection{Faktorisierung}
+\subsection{\textsc{Miller}-\textsc{Rabin}-Primzahltest}
+\lstinputlisting{math/millerRabin.cpp}
+
+\subsection{Faktorisierung}
 \lstinputlisting{math/factor.cpp}
 
-\subsubsection{Mod-Exponent über $\mathbb{F}_p$}
+\subsection{Mod-Exponent über $\mathbb{F}_p$}
 \lstinputlisting{math/modExp.cpp}
 
-\subsubsection{LGS über $\mathbb{F}_p$}
+\subsection{LGS über $\mathbb{F}_p$}
 \lstinputlisting{math/lgsFp.cpp}
 
 \subsection{Binomialkoeffizienten}
