--- a/math/math.tex
+++ b/math/math.tex
@@ -177,3 +177,6 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 	\#labeled unrooted trees		& $n^{n-2}$\\
 	\hline
 \end{tabular}
+
+\subsection{3D-Kugeln}
+\lstinputlisting{math/gcDist.cpp}
