--- a/convenience/convenience.tex
+++ b/convenience/convenience.tex
@@ -5,7 +5,7 @@
 
 \subsection{Sonstiges}
 \begin{lstlisting}
-// Alles-Haeder.
+// Alles-Header.
 #include <bits/stdc++.h>
 
 // Setzt das deutsche Tastaturlayout.
