String fixes and STL-Debug flag.

--- a/convenience/convenience.tex
+++ b/convenience/convenience.tex
@@ -19,4 +19,8 @@ set<point2, decltype(comp)> set1(comp);
 
 // PI
 #define PI (2*acos(0))
+
+// STL-Debugging, Compiler flags.
+-D_GLIBCXX_DEBUG
+#define _GLIBCXX_DEBUG
 \end{lstlisting}
