Added C++ bigint implementation.

--- a/math/math.tex
+++ b/math/math.tex
@@ -180,3 +180,6 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 
 \subsection{3D-Kugeln}
 \lstinputlisting{math/gcDist.cpp}
+
+\subsection{Big Integers}
+\lstinputlisting{math/bigint.cpp}
