Optical improvements of the datastructures section.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -5,8 +5,8 @@
 
 \subsection{Segmentbaum}
 \lstinputlisting{datastructures/segmentTree.cpp}
-\lstinline{update()} kann so umgeschrieben werden, dass ganze Intervalle geändert werden.
-Dazu muss ein Offset in den inneren Knoten des Baums gespeichert werden.
+Mit \lstinline{update()} können ganze Intervalle geändert werden.
+Dazu: Offset in den inneren Knoten des Baums speichern.
 
 \subsection{Fenwick Tree}
 \lstinputlisting{datastructures/fenwickTree.cpp}
