Makes it easy to change team name and university.

--- a/tcr.tex
+++ b/tcr.tex
@@ -1,5 +1,9 @@
 \documentclass{article}
 
+% General information.
+\newcommand{\teamname}{ChaosKITs}
+\newcommand{\university}{Karlsruhe Institute of Technology}
+
 % Font encoding.
 \usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
@@ -18,8 +22,8 @@
 \usepackage{scrpage2}
 \pagestyle{scrheadings}
 \clearscrheadfoot
-\ihead{Karlsruhe Institute of Technology}
-\chead{ChaosKITs}
+\ihead{\university}
+\chead{\teamname}
 \ohead{\pagemark}
 
 % Colors, used for syntax highlighting.
@@ -142,7 +146,7 @@
 
 % Title and author information.
 \title{Team Contest Reference}
-\author{ChaosKITs \\ Karlsruhe Institute of Technology}
+\author{\teamname \\ \university}
 \begin{document}
 
 % Titlepage with table of contents.
