Renamin sonstiges ot other.

--- a/other/other.tex
+++ b/other/other.tex
@@ -9,10 +9,10 @@
 \end{enumerate}
 
 \subsection{Zeileneingabe}
-\lstinputlisting{sonstiges/split.cpp}
+\lstinputlisting{other/split.cpp}
 
 \subsection{Bit Operations}
-\lstinputlisting{sonstiges/bitOps.cpp}
+\lstinputlisting{other/bitOps.cpp}
 
 \subsection{Josephus-Problem}
 $n$ Personen im Kreis, jeder $k$-te wird erschossen.
@@ -20,12 +20,12 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 	\item[Spezialfall $k=2$:] Betrachte Binärdarstellung von $n$.
 	Für $n = 1b_1b_2b_3..b_n$ ist $b_1b_2b_3..b_n1$ die Position des letzten Überlebenden.
 	(Rotiere $n$ um eine Stelle nach links)
-	\lstinputlisting{sonstiges/josephus2.cpp}
+	\lstinputlisting{other/josephus2.cpp}
 	\item[Allgemein:] Sei $F(n,k)$ die Position des letzten Überlebenden.
 	Nummeriere die Personen mit $0, 1, \ldots, n-1$.
 	Nach Erschießen der $k$-ten Person, hat der Kreis noch Größe $n-1$ und die Position des Überlebenden ist jetzt $F(n-1,k)$.
 	Also: $F(n,k) = (F(n-1,k)+k)\%n$. Basisfall: $F(1,k) = 0$. 
-	\lstinputlisting{sonstiges/josephusK.cpp}
+	\lstinputlisting{other/josephusK.cpp}
 \end{description}
 \textbf{Beachte bei der Ausgabe, dass die Personen im ersten Fall von $1, \ldots, n$ nummeriert sind, im zweiten Fall von $0, \ldots, n-1$!}
 
