--- a/tcr.tex
+++ b/tcr.tex
@@ -35,7 +35,7 @@
   \input{math/math}
   \input{string/string}
   \input{java/java}
-  \input{sonstiges/sonstiges}
+  \input{other/other}
 \end{multicols}
 
 \end{document}
