Adjusting spacing between list items.

--- a/latexHeaders/layout.tex
+++ b/latexHeaders/layout.tex
@@ -22,7 +22,7 @@
 
 % Nice enumerations without wasting space above and below.
 \usepackage{enumitem}
-\setlist{nosep}
+\setlist{itemsep=1pt}
 
 % Multicol layout for the table of contents.
 \usepackage{multicol}
