--- a/other/other.tex
+++ b/other/other.tex
@@ -30,7 +30,7 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 \textbf{Beachte bei der Ausgabe, dass die Personen im ersten Fall von $1, \ldots, n$ nummeriert sind, im zweiten Fall von $0, \ldots, n-1$!}
 
 \subsection{Gemischtes}
-\begin{itemize}[itemsep=5mm]
+\begin{itemize}
 	\item \emph{\textsc{Johnsons} Reweighting Algorithmus:}
 	Füge neue Quelle \lstinline{S} hinzu, mit Kanten mit Gewicht 0 zu allen Knoten.
 	Nutze \textsc{Bellmann-Ford} zum Betsimmen der Entfernungen \lstinline{d[i]} von \lstinline{S} zu allen anderen Knoten.
