--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -28,12 +28,10 @@ Erkennt negative Zyklen.
 \subsubsection{\textsc{Floyd-Warshall}-Algorithmus}
 \lstinputlisting{graph/floydWarshall.cpp}
 \begin{itemize}
-	\item Evtl. überschreibt die Eingabe die Nullen auf der Hauptdiagonalen.
-	Nur negative Werte sollten die Nullen überschreiben.
+	\item Nur negative Werte sollten die Nullen überschreiben.
 	\item Von parallelen Kanten sollte nur die günstigste gespeichert werden.
-	\item Knoten \lstinline{i} liegt genau dann auf einem negativen Kreis, wenn \lstinline{dist[i][i] < 0} ist.
-	\item Ein u-v-Pfad existiert nicht, wenn \lstinline{dist[u][v] == INF}.
-	\item Gibt es einen Knoten \lstinline{c}, sodass \lstinline{dist[u][c] != INF && dist[c][v] != INF && dist[c][c] < 0}, wird der u-v-Pfad beliebig kurz.
+	\item \lstinline{i} liegt genau dann auf einem negativen Kreis, wenn \lstinline{dist[i][i] < 0} ist.
+	\item Wenn für \lstinline{c} gilt, dass \lstinline{dist[u][c] != INF && dist[c][v] != INF && dist[c][c] < 0}, wird der u-v-Pfad beliebig kurz.
 \end{itemize}
 
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
