Removed TSP and bitonic TSP since both are wrong. FIX IT!

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -99,9 +99,9 @@ Gut bei sehr dicht besetzten Graphen.
 \subsection{Maximal Cardinatlity Bipartite Matching}\label{kuhn}
 \lstinputlisting{graph/maxCarBiMatch.cpp}
 
-\subsection{TSP}
-\lstinputlisting{graph/TSP.cpp}
+% \subsection{TSP}
+% \lstinputlisting{graph/TSP.cpp}
 
-\subsection{Bitonic TSP}
-\lstinputlisting{graph/bitonicTSP.cpp}
+% \subsection{Bitonic TSP}
+% \lstinputlisting{graph/bitonicTSP.cpp}
 
