Adding code for regular gauss algorithm.

--- a/math/math.tex
+++ b/math/math.tex
@@ -22,6 +22,9 @@ Sei $0 \leq x < n$. Definiere $d := \gcd(x, n)$.\newline
 \subsection{LGS über $\mathbb{F}_p$}
 \lstinputlisting{math/lgsFp.cpp}
 
+\subsection{LGS über $\mathbb{R}$}
+\lstinputlisting{math/gauss.cpp}
+
 \subsection{Chinesischer Restsatz}
 \begin{itemize}
 	\item Extrem anfällig gegen Overflows. Evtl. häufig 128-Bit Integer verwenden.
