Typesetting for chinese remainder.

--- a/math/math.tex
+++ b/math/math.tex
@@ -35,9 +35,9 @@ Sei $0 \leq x < n$. Definiere $d := \gcd(x, n)$.\newline
 			d := ggT(n, m) = yn + zm
 		\]
 		Formel kann auch für nicht teilerfremde Moduli verwendet werden.
-	\item Sind die Moduli nicht teilerfremd, existiert genau dann eine Lösung,
-	wenn $a_i \equiv a_j \mod \gcd(m_i, m_j)$. In diesem Fall sind keine Faktoren
-	auf der linken Seite erlaubt.
+		Sind die Moduli nicht teilerfremd, existiert genau dann eine Lösung,
+		wenn $a_i \equiv a_j \mod \gcd(m_i, m_j)$. In diesem Fall sind keine Faktoren
+		auf der linken Seite erlaubt.
 \end{itemize}
 \lstinputlisting{math/chineseRemainder.cpp}
 
