--- a/math/math.tex
+++ b/math/math.tex
@@ -51,18 +51,9 @@ Sei $0 \leq x < n$. Definiere $d := \gcd(x, n)$.\newline
 Vorberechnen, wenn häufig benötigt.
 \lstinputlisting{math/binomial.cpp}
 
-\subsection{Maximales Teilfeld}
-\lstinputlisting{math/maxTeilfeld.cpp}
-Obiger Code findet kein maximales Teilfeld, das über das Ende hinausgeht. Dazu:
-\begin{enumerate}
-	\item Finde maximales Teilfeld, das nicht übers Ende geht.
-	\item Berechne minimales Teilfeld, das nicht über den Rand geht (analog).
-	\item Nimm Maximum aus gefundenem Maximalen und Allem ohne dem Minimalen.
-\end{enumerate}
-
 \subsection{Polynome \& FFT}
 Multipliziert Polynome $A$ und $B$.
-\begin{itemize}
+\begin{itemize}[nosep]
 	\item $\deg(A * B) = \deg(A) + \deg(B)$
 	\item Vektoren \lstinline{a} und \lstinline{b} müssen mindestens Größe
 	$\deg(A * B) + 1$ haben.
