Typesetting math section.

--- a/math/math.tex
+++ b/math/math.tex
@@ -62,6 +62,9 @@ Multipliziert Polynome $A$ und $B$.
 \end{itemize}
 \lstinputlisting{math/fft.cpp}
 
+\subsection{3D-Kugeln}
+\lstinputlisting{math/spheres.cpp}
+
 \subsection{Kombinatorik}
 
 \subsubsection{Berühmte Zahlen}
@@ -201,10 +204,6 @@ Weise jedem Zustand $X$ wie folgt eine \textsc{Grundy}-Zahl $g\left(X\right)$ zu
 \]
 $X$ ist genau dann gewonnen, wenn $g\left(X\right) > 0$ ist.\\\\
 Wenn man $k$ Spiele in den Zuständen $X_1, \ldots, X_k$ hat, dann ist die \textsc{Grundy}-Zahl des Gesamtzustandes $g\left(X_1\right) \oplus \ldots \oplus g\left(X_k\right)$.
-\lstinputlisting{math/nimm.cpp}
-
-\subsection{3D-Kugeln}
-\lstinputlisting{math/gcDist.cpp}
 
 \subsection{Big Integers}
 \lstinputlisting{math/bigint.cpp}
