Typesetting string section.

--- a/string/string.tex
+++ b/string/string.tex
@@ -6,9 +6,6 @@
 \subsection{\textsc{Aho-Corasick}-Automat}
 \lstinputlisting{string/ahoCorasick.cpp}
 
-\subsection{\textsc{Levenshtein}-Distanz}
-\lstinputlisting{string/levenshtein.cpp}
-
 \subsection{Trie}
 \lstinputlisting{string/trie.cpp}
 
@@ -19,4 +16,4 @@
 \lstinputlisting{string/LCSubstring.cpp}
 
 \subsection{Longest Common Subsequence}
-\lstinputlisting{string/LCSubSequence.cpp}
+\lstinputlisting{string/longestCommonSubsequence.cpp}
