Adding code for a suffix automaton doing longest common substring queries in linear time.

--- a/string/string.tex
+++ b/string/string.tex
@@ -12,8 +12,8 @@
 \subsection{Suffix-Array}
 \lstinputlisting{string/suffixArray.cpp}
 
-\subsection{Longest Common Substring}
-\lstinputlisting{string/LCSubstring.cpp}
+\subsection{Suffix-Automaton}
+\lstinputlisting{string/suffixAutomaton.cpp}
 
 \subsection{Longest Common Subsequence}
 \lstinputlisting{string/longestCommonSubsequence.cpp}
