Added rolling hash.

--- a/string/string.tex
+++ b/string/string.tex
@@ -37,3 +37,6 @@
 
 \subsection{Longest Common Subsequence}
 \lstinputlisting{string/longestCommonSubsequence.cpp}
+
+\subsection{Rolling Hash}
+\lstinputlisting{string/rollingHash.cpp}
