--- a/math/math.tex
+++ b/math/math.tex
@@ -105,6 +105,9 @@ Multipliziert Polynome $A$ und $B$.
 \subsection{3D-Kugeln}
 \lstinputlisting{math/spheres.cpp}
 
+\subsection{Longest Increasing Subsequence}
+\lstinputlisting{math/longestIncreasingSubsequence.cpp}
+
 \subsection{Kombinatorik}
 
 \subsubsection{Berühmte Zahlen}
