Typesetting combinatorics chapter.

--- a/latexHeaders/math.tex
+++ b/latexHeaders/math.tex
@@ -2,8 +2,10 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{amssymb}
+\usepackage{ntheorem}
 
 % New enviroment for remarks.
+\theoremstyle{break}
 \newtheorem{bem}{Bemerkung}
 
 % New commands for math operators.
