Adding 128 bit float.

--- a/other/other.tex
+++ b/other/other.tex
@@ -27,8 +27,8 @@ set<point2, decltype(comp)> set1(comp);
 -D_GLIBCXX_DEBUG
 #define _GLIBCXX_DEBUG
 
-// 128-Bit Integer. Muss zum Einlesen/Ausgeben in einen int oder long long gecastet werden.
-__int128
+// 128-Bit Integer/Float. Muss zum Einlesen/Ausgeben in einen int oder long long gecastet werden.
+__int128, __float128
 \end{lstlisting}
 
 \subsection{Josephus-Problem}
